fixed paths to foundation components so we can limit the amount of foundation css that gets into our project - i cut about 70k, also styled topbar links - now they turn to the -color variable on focus/touch/click, fixed various spacing issues on calendar subscriptions

--- a/www/scss/_settings.scss
+++ b/www/scss/_settings.scss
@@ -67,7 +67,7 @@ $body-font-weight: 300;
 
 // Colors
 
-// $primary-color: #2ba6cb;
+$primary-color: #23538A;
 // $secondary-color: #e9e9e9;
 // $alert-color: #c60f13;
 // $success-color: #5da423;
@@ -1263,7 +1263,7 @@ $topbar-margin-bottom: emCalc(0);
 
 $topbar-link-color: #555;
 $topbar-link-color-hover: #777;
-// $topbar-link-color-active: #fff;
+$topbar-link-color-active: $primary-color;
 // $topbar-link-weight: bold;
 // $topbar-link-font-size: emCalc(13);
 // $topbar-link-hover-lightness: -30%; // Darken by 30%
